--- a/MicroManager/Views/Customer/Details.cshtml
+++ b/MicroManager/Views/Customer/Details.cshtml
@@ -65,6 +65,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Phone)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.email)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.email)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CustomerType)
         </dt>
