--- a/MicroManager/Views/Product/Details.cshtml
+++ b/MicroManager/Views/Product/Details.cshtml
@@ -18,22 +18,22 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductSize)
+          Product Size
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductSize.ProductSizeId)
+            @Html.DisplayFor(model => model.ProductSize.Size)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Seeds)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Seeds.SeedId)
+            @Html.DisplayFor(model => model.Seeds.Type)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.InventoryCategory)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.InventoryCategory.InventoryCategoryId)
+            @Html.DisplayFor(model => model.InventoryCategory.InventoryCategoryType)
         </dd>
     </dl>
 </div>
