--- a/MicroManager/Views/Product/Index.cshtml
+++ b/MicroManager/Views/Product/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Product List</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-outline-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -18,13 +18,13 @@
                 @Html.DisplayNameFor(model => model.Seeds)
             </th>
             <th>
+                Product Size
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProductSize)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.InventoryCategory)
+                Inventory Category
             </th>
             <th></th>
         </tr>
@@ -35,12 +35,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Seeds.Type)
             </td>
+            <td>
+                    @Html.DisplayFor(modelItem => item.ProductSize.Size)
+            </td>
                 
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                    @Html.DisplayFor(modelItem => item.ProductSize.Size)
             </td>
             <td>
                     @Html.DisplayFor(modelItem => item.InventoryCategory.InventoryCategoryType)
