Issues with Customer Orders

--- a/MicroManager/Views/InventoryCategory/Index.cshtml
+++ b/MicroManager/Views/InventoryCategory/Index.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Categories</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-outline-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -20,17 +20,21 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.InventoryCategoryType)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.InventoryCategoryId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.InventoryCategoryId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.InventoryCategoryId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            
+            <tr>
+                <td>
+                                @Html.DisplayFor(modelItem => item.InventoryCategoryType)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.InventoryCategoryId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.InventoryCategoryId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.InventoryCategoryId">Delete</a>
+                </td>
+            </tr>
+            
+        }
     </tbody>
 </table>
+@* InventoryCategoryType *@
