--- a/MicroManager/Views/CustomerOrder/Create.cshtml
+++ b/MicroManager/Views/CustomerOrder/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MicroManager.Models.OrderDetail
+﻿@model MicroManager.Models.CustomerOrder
 
 @{
     ViewData["Title"] = "Create";
@@ -7,19 +7,29 @@
 
 <h1>Create</h1>
 
-<h4>OrderDetail</h4>
+<h4>CustomerOrder</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="OrderDate" class="control-label"></label>
+                <input asp-for="OrderDate" class="form-control" />
+                <span asp-validation-for="OrderDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Customer_Id" class="control-label"></label>
+                <select asp-for="Customer_Id" class ="form-control" asp-items="ViewBag.Customer_Id"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Product_Id" class="control-label"></label>
                 <select asp-for="Product_Id" class ="form-control" asp-items="ViewBag.Product_Id"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Order_Id" class="control-label"></label>
-                <select asp-for="Order_Id" class ="form-control" asp-items="ViewBag.Order_Id"></select>
+                <label asp-for="Price" class="control-label"></label>
+                <input asp-for="Price" class="form-control" />
+                <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
@@ -27,9 +37,9 @@
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
+                <label asp-for="Tax" class="control-label"></label>
+                <input asp-for="Tax" class="form-control" />
+                <span asp-validation-for="Tax" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
