--- a/MicroManager/Views/Product/Details.cshtml
+++ b/MicroManager/Views/Product/Details.cshtml
@@ -5,17 +5,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Product Details</h1>
 
 <div>
-    <h4>Product</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
+            @Html.DisplayNameFor(model => model.Seeds)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
+            @Html.DisplayFor(model => model.Seeds.Type)
         </dd>
         <dt class = "col-sm-2">
           Product Size
@@ -24,13 +24,13 @@
             @Html.DisplayFor(model => model.ProductSize.Size)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Seeds)
+            @Html.DisplayNameFor(model => model.Price)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Seeds.Type)
+            @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InventoryCategory)
+            Inventory Category
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.InventoryCategory.InventoryCategoryType)
