--- a/MicroManager/Views/ProductSize/Delete.cshtml
+++ b/MicroManager/Views/ProductSize/Delete.cshtml
@@ -7,9 +7,9 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this Package Size?</h3>
 <div>
-    <h4>ProductSize</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -22,7 +22,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProductSizeId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-outline-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
