--- a/MicroManager/Views/ProductSize/Details.cshtml
+++ b/MicroManager/Views/ProductSize/Details.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Package Size Details</h1>
 
 <div>
-    <h4>ProductSize</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -20,6 +20,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ProductSizeId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.ProductSizeId" class="btn btn-outline-primary">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
