--- a/MicroManager/Views/ProductSize/Edit.cshtml
+++ b/MicroManager/Views/ProductSize/Edit.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Edit Package Size</h1>
 
-<h4>ProductSize</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
