--- a/MicroManager/Views/CustomerOrder/Index.cshtml
+++ b/MicroManager/Views/CustomerOrder/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Customer Orders</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -44,8 +44,13 @@
                     @Html.DisplayFor(modelItem => item.Customer.CompanyName)
             </td>
             <td>
-                    @Html.DisplayFor(modelItem => item.Product.ProductSize)
-            </td>
+                    @foreach(var product in item.Product)
+                    {
+                        <div>
+                            @product.Seeds;
+                        </div>
+                    }
+                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
