--- a/MicroManager/Views/Shared/_Layout.cshtml
+++ b/MicroManager/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CustomerOrder" asp-action="Index">Customer Orders</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductCategory" asp-action="Index">Product Categories</a>
                         </li>
                         
                        
