--- a/MicroManager/Views/Product/Create.cshtml
+++ b/MicroManager/Views/Product/Create.cshtml
@@ -26,6 +26,10 @@
                 <select asp-for="InventoryCategory_Id" class ="form-control" asp-items="ViewBag.InventoryCategory_Id"></select>
             </div>
             <div class="form-group">
+                <label asp-for="ProductCategory_Id" class="control-label"></label>
+                <select asp-for="ProductCategory_Id" class ="form-control" asp-items="ViewBag.ProductCategory_Id"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
