--- a/MicroManager/Views/Product/Delete.cshtml
+++ b/MicroManager/Views/Product/Delete.cshtml
@@ -19,22 +19,28 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductSize)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductSize.ProductSizeId)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Seeds)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Seeds.SeedId)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductSize)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ProductSize.ProductSizeId)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.InventoryCategory)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.InventoryCategory.InventoryCategoryId)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductCategory)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ProductCategory.ProductName)
         </dd>
     </dl>
     
