--- a/MicroManager/Views/Product/Details.cshtml
+++ b/MicroManager/Views/Product/Details.cshtml
@@ -5,24 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Product Details</h1>
+<h1>Details</h1>
 
 <div>
-    
+    <h4>Product</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Seeds)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Seeds.Type)
-        </dd>
-        <dt class = "col-sm-2">
-          Product Size
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductSize.Size)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
@@ -30,10 +18,28 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class = "col-sm-2">
-            Inventory Category
+            @Html.DisplayNameFor(model => model.Seeds)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.InventoryCategory.InventoryCategoryType)
+            @Html.DisplayFor(model => model.Seeds.SeedId)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductSize)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ProductSize.ProductSizeId)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.InventoryCategory)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.InventoryCategory.InventoryCategoryId)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductCategory)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ProductCategory.ProductName)
         </dd>
     </dl>
 </div>
