--- a/MicroManager/Views/Product/Edit.cshtml
+++ b/MicroManager/Views/Product/Edit.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit Product</h1>
+<h1>Edit</h1>
 
-
+<h4>Product</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,6 +28,11 @@
                 <label asp-for="InventoryCategory_Id" class="control-label"></label>
                 <select asp-for="InventoryCategory_Id" class="form-control" asp-items="ViewBag.InventoryCategory_Id"></select>
                 <span asp-validation-for="InventoryCategory_Id" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ProductCategory_Id" class="control-label"></label>
+                <select asp-for="ProductCategory_Id" class="form-control" asp-items="ViewBag.ProductCategory_Id"></select>
+                <span asp-validation-for="ProductCategory_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
