--- a/MicroManager/Views/ProductCategory/Index.cshtml
+++ b/MicroManager/Views/ProductCategory/Index.cshtml
@@ -1,42 +1,36 @@
-﻿@model IEnumerable<ProductCategory>
+﻿@model IEnumerable<MicroManager.Models.ProductCategory>
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Product Categories</h1>
+<h1>Add New Product Category</h1>
 
-<div class="container p-3">
-    <div class="row p-4">
-        <div class="col-6">
-            <h2 class="text-primary"> Product Category List</h2>
-        </div>
-        <div class="col-6 text-end">
-            <a asp-controller="ProductCategory" asp-action="Create" class="btn btn-outline-primary"><i class="bi bi-plus-circle"></i>Create Product Category</a>
-        </div>
-    </div>
-
-
-    <table class="table table-bordered table-stripped" style="width:100%">
-        <thead>
-            <tr>
-                <th>
-                    Product Category
-                </th>
-
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var obj in Model)
-            {
-                <tr>
-                    <td width="50%">
-                        @obj.ProductName
-                    </td>
-
-                </tr>
-            }
-        </tbody>
-    </table>
-</div>
+<p>
+    <a asp-action="Create"class="btn btn-outline-primary">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ProductName)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductName)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.ProductCategoryId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.ProductCategoryId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.ProductCategoryId">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
