Stuck on InputOrder/Browse.  Something to do with the "Guid id" in the foreach and then Line 13 of Browse.cshtml

--- a/MicroManager/Views/Shared/_Layout.cshtml
+++ b/MicroManager/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                         </li>
                         
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductCategory" asp-action="Index">Product Categories</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="InputOrder" asp-action="Index">Input Customer Order</a>
                         </li> 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="CustomerOrder" asp-action="AddProductCategory">Customer Order </a>
@@ -49,6 +49,9 @@
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                         <li >
                                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
+                                        </li>
+                                        <li>
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductCategory" asp-action="Index">Product Categories</a>
                                         </li>
                                         <li >
                                             <a class="nav-link text-dark" asp-area="" asp-controller="ProductSize" asp-action="Index">Product Size</a>
