--- a/MicroManager/Views/Product/Index.cshtml
+++ b/MicroManager/Views/Product/Index.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Product List</h1>
+<h1>Index</h1>
 
 <p>
-    <a asp-action="Create"class="btn btn-outline-primary">Create New</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -25,9 +25,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.ProductCategory)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.InventoryCategory)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -38,16 +35,13 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                    @Html.DisplayFor(modelItem => item.Seeds.Type)
+                @Html.DisplayFor(modelItem => item.Seeds.Type)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ProductSize.Size)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ProductCategory.ProductName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.InventoryCategory.InventoryCategoryType)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
