--- a/MicroManager/Views/Product/Details.cshtml
+++ b/MicroManager/Views/Product/Details.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Product Details</h1>
 
 <div>
-    <h4>Product</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -21,16 +21,16 @@
             @Html.DisplayNameFor(model => model.Seeds)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Seeds.SeedId)
+            @Html.DisplayFor(model => model.Seeds.Type)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductSize)
+            Product Size
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductSize.ProductSizeId)
+            @Html.DisplayFor(model => model.ProductSize.Size)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductCategory)
+            Product Category
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ProductCategory.ProductName)
