--- a/MicroManager/Views/Product/Index.cshtml
+++ b/MicroManager/Views/Product/Index.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>List of Products</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-outline-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -20,10 +20,10 @@
                 @Html.DisplayNameFor(model => model.Seeds)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProductSize)
+                Product Size
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProductCategory)
+                Product Category
             </th>
             <th></th>
         </tr>
