--- a/MicroManager/Views/InputOrder/Browse.cshtml
+++ b/MicroManager/Views/InputOrder/Browse.cshtml
@@ -14,11 +14,10 @@
             <div class="col-sm-6 col-lg-4 mb-3">
                 <div class="card mb-3 text-center h-100">
                     <div class="card-body">
-                        <a asp-controller="Product" asp-action="Details" asp-route-id="@p.ProductCategory">@p.Seeds.Type</a>
+                        <a asp-controller="Product" asp-action="Details" asp-route-id="@p.ProductId">@p.Seeds.Type</a>
                     </div>
                 </div>
             </div>
         }
     </div>
 </section>
- 
