--- a/MicroManager/Views/InputOrder/Index.cshtml
+++ b/MicroManager/Views/InputOrder/Index.cshtml
@@ -14,7 +14,7 @@
             <div class="col-sm-6 col-lg-4 mb-3">
                 <div class="card mb-3 text-center h-100">
                     <div class="card-body">
-                        <a asp-controller="InputOrder" asp-action="Browse" asp-route-id="@item.ProductCategoryId">@item.ProductName</a>
+                        <h5> <a asp-controller="InputOrder" asp-action="Browse" asp-route-id="@item.ProductCategoryId">@item.ProductName</a></h5>
                     </div>
                 </div>
             </div>
