--- a/MicroManager/Views/CustomerOrder/AddProductCategory.cshtml
+++ b/MicroManager/Views/CustomerOrder/AddProductCategory.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>AddProductCategory</h1>
+<h1>Add a Product Category</h1>
 
-<h4>ProductCategory</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
