--- a/MicroManager/Views/Product/Details.cshtml
+++ b/MicroManager/Views/Product/Details.cshtml
@@ -1,14 +1,12 @@
 ﻿@model MicroManager.Models.Product
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Product Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Product Details</h1>
-
-<div>
-    
+<div>    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -37,7 +35,21 @@
         </dd>
     </dl>
 </div>
-<div>
+
+@* Form to add Quantity for the shopping cart *@
+<form method="post" action="/InputOrder/AddToCart" class="offset-2">
+    @* Hidden Field for the selected ProductId *@
+    <input type="hidden" id="ProductId" name="ProductId" value="@Model.ProductId" /> @* Needs to replace p with Model  *@
+    <div class="form-group">
+        <label class="control-label" for="Quantity">Quantity: </label>
+        <input name="Quantity" id="Quantity" required min="1" max="99999" type="number" class="input-small" />
+    </div>
+    <br />
+    <button class="btn btn-outline-primary">Add To Order</button>
+</form>
+<a href="javascript:history.go(-1);"><< Back</a>
+
+@* <div>
     <a asp-action="Edit" asp-route-id="@Model?.ProductId">Edit</a> |
     <a asp-action="Index">Back to List</a>
-</div>
+</div> *@
