--- a/MicroManager/Views/Product/Details.cshtml
+++ b/MicroManager/Views/Product/Details.cshtml
@@ -37,7 +37,7 @@
 </div>
 
 @* Form to add Quantity for the shopping cart *@
-<form method="post" action="/InputOrder/AddToCart" class="offset-2">
+<form method="post" action="/InputOrder/Cart" class="offset-2">
     @* Hidden Field for the selected ProductId *@
     <input type="hidden" id="ProductId" name="ProductId" value="@Model.ProductId" /> @* Needs to replace p with Model  *@
     <div class="form-group">
