--- a/MicroManager/Views/InputOrder/Index.cshtml
+++ b/MicroManager/Views/InputOrder/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MicroManager.Models.ProductCategory>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Product Categories";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
