I'm close to building a Input Customer Order Cart but it's not bringing in any Data to InputOrder/Cart view

--- a/MicroManager/Views/InputOrder/Cart.cshtml
+++ b/MicroManager/Views/InputOrder/Cart.cshtml
@@ -26,7 +26,7 @@
                 @Html.DisplayNameFor(model => model.Product)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Customer)
+                @Html.DisplayNameFor(model => model.Employee)
             </th>
             <th></th>
         </tr>
@@ -47,7 +47,7 @@
                 @Html.DisplayFor(modelItem => item.Product.ProductId)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Customer.CustomerId)
+                @Html.DisplayFor(modelItem => item.Employee.EmployeeId)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CartId">Edit</a> |
